import * as selectors from '../signals';
import * as dateHelpers from 'src/helpers/date';

jest.mock('src/helpers/date');

describe('Selectors: signals', () => {
  let state;
  const props = {
    match: {
      params: {
        facet: 'sending_domain',
        facetId: 'test.com'
      }
    },
    location: {
      state: {
        date: '2018-02-01'
      },
      search: '?subaccount=101'
    }
  };

  beforeEach(() => {
    state = {
      signalOptions: {
        relativeRange: '14days'
      },
      signals: {
        spamHits: {
          total_count: 1,
          data: [
            {
              sending_domain: 'test.com',
              current_trap_hits: 123,
              current_relative_trap_hits: 0.12,
              history: [
                {
                  dt: '2018-01-01',
                  injections: 182400,
                  relative_trap_hits: 0.25,
                  trap_hits: 456
                },
                {
                  dt: '2018-01-02',
                  injections: 35000,
                  relative_trap_hits: 0.1,
                  trap_hits: 35
                }
              ]
            }
          ],
          loading: false,
          error: null
        },
        engagementRecency: {
          total_count: 10,
          data: [
            {
              sending_domain: 'test.com',
              history: [
                { c_total: 25, c_new: 5, c_uneng: 5, c_365d: 5, dt: '2018-01-01' }
              ]
            }
          ],
          loading: false,
          error: null
        }
      }
    };

    dateHelpers.fillByDate.mockImplementationOnce(({ dataSet }) => dataSet);
  });

  describe('spam hits details', () => {
    it('should select spam hits details', () => {
      expect(selectors.selectSpamHitsDetails(state, props)).toMatchSnapshot();
    });

    it('should be empty with no results when not loading', () => {
      const stateWhenEmpty = { signals: { spamHits: { data: [], loading: false }}};
      expect(selectors.selectSpamHitsDetails(stateWhenEmpty, props)).toMatchSnapshot();
    });

    it('should not be empty when loading', () => {
      const stateWhenLoading = { signals: { spamHits: { data: [], loading: true }}};
      expect(selectors.selectSpamHitsDetails(stateWhenLoading, props).details.empty).toBe(false);
    });
  });

  describe('engagement recency details', () => {
    it('should select details', () => {
      expect(selectors.selectEngagementRecencyDetails(state, props)).toMatchSnapshot();
    });

    it('should be empty with no results when not loading', () => {
      state = { signals: { engagementRecency: { data: [], loading: false }}};
      expect(selectors.selectEngagementRecencyDetails(state, props)).toMatchSnapshot();
    });

    it('should not be empty when loading', () => {
      state = { signals: { engagementRecency: { data: [], loading: true }}};
      expect(selectors.selectEngagementRecencyDetails(state, props).details.empty).toBe(false);
    });
  });

  describe('selected date', () => {
    it('should select date from react router', () => {
      expect(selectors.getSelectedDateFromRouter(state, props)).toMatchSnapshot();
    });
  });


  describe('selectSpamHitsOverviewData', () => {
    it('returns data', () => {
      expect(selectors.selectSpamHitsOverviewData(state, { relativeRange: '7days' })).toMatchSnapshot();
    });

    it('returns empty array', () => {
      const stateWhenEmpty = { signals: { spamHits: { data: []}}};
      expect(selectors.selectSpamHitsOverviewData(stateWhenEmpty, { relativeRange: '7days' })).toEqual([]);
    });
  });

  describe('selectSpamHitsOverviewMetaData', () => {
    it('returns max values', () => {
      expect(selectors.selectSpamHitsOverviewMetaData(state)).toEqual({
        currentMax: 123,
        currentRelativeMax: 0.12,
        max: 456,
        relativeMax: 0.25
      });
    });

    it('returns null', () => {
      const stateWhenEmpty = { signals: { spamHits: { data: []}}};
      expect(selectors.selectSpamHitsOverviewMetaData(stateWhenEmpty)).toEqual({
        currentMax: null,
        currentRelativeMax: null,
        max: null,
        relativeMax: null
      });
    });
  });

  describe('selectSpamHitsOverview', () => {
    it('returns all overview data', () => {
      expect(selectors.selectSpamHitsOverview(state, { relativeRange: '7days' })).toMatchSnapshot();
    });
  });
});
